# transformer-from-scratch

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  FINAL_REPORT.md  IMPLEMENTATION_ORDER.md  README.md  main.py  pyproject.toml  train_wmt14.py
configs/: README.md  __init__.py  base.yaml  debug.yaml  large.yaml  rtx3090.yaml  rtx3090_debug.yaml  small.yaml  utils.py
data/: dataset.py  tokenizer.py  wmt_dataloader.py
evaluation/: __init__.py  metrics.py
scripts/: download_wmt14.py  prepare_wmt14_data.py  train_simple.py  train_with_config.py
test_checkpoints/checkpoint-20/: trainer_state.json  training_args.json
tests/: test_attention.py  test_dataset.py  test_decoder.py  test_encoder.py  test_feedforward.py  test_initialization.py  test_layer_normalization.py  test_loss.py  test_masking.py  test_metrics.py  test_optimizer.py  test_positional_encoding.py  test_residual.py  test_token_embedding.py  test_tokenizer.py  test_trainer.py  test_transformer.py
training/: __init__.py  loss.py  optimizer.py  resource_monitor.py  tensorboard_callback.py  trainer.py  visualization_callback.py
transformer/: __init__.py  config.py
transformer/embeddings/: __init__.py  positional.py  token_embedding.py
transformer/layers/: __init__.py  attention.py  feedforward.py  normalization.py  residual.py
transformer/models/: __init__.py  decoder.py  encoder.py  transformer.py
transformer/utils/: __init__.py  initialization.py  masking.py
